# switchboard-plug-about

./: .travis.yml  CMakeLists.txt  README.md  meson.build  meson_options.txt  plug.plug
.github/workflows/: main.yml
cmake/: Translations.cmake
data/: OperatingSystemView.css  gresource.xml  io.elementary.switchboard-plug-about.appdata.xml.in  io.elementary.switchboard.about.appdata.xml.in  meson.build  pantheon-plug-about.desktop  system.metainfo.xml.in
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  about-plug.pot  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  btk.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  (+139 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: About.vala  CMakeLists.txt  Config.vala.in  Plug.vala  RestoreDialog.vala  about-plug.vala  fd.c  meson.build
src/DBus/: Drivers.vala  SystemUpdate.vala
src/Dialogs/: IssueDialog.vala  RestoreDialog.vala
src/Interfaces/: FirmwareClient.vala  FirmwareManager.vala  FwupdManager.vala  LoginManager.vala
src/LogDialog/: LogCell.vala  LogDetailsView.vala  LogDialog.vala  SystemdLogEntry.vala  SystemdLogModel.vala
src/LogsDialog/: LogsDialog.vala  SystemdLogModel.vala
src/Objects/: Details.vala  Device.vala  DeviceFlag.vala  Release.vala  ReleaseFlag.vala
src/Utils/: ARMPartDecoder.vala  Formatter.vala  SystemUpgrade.vala  SystemdLogModel.vala
src/Views/: DriversView.vala  FirmwareDevicePage.vala  FirmwareDevicesView.vala  FirmwareReleasePage.vala  FirmwareReleaseView.vala  FirmwareReleasesView.vala  FirmwareView.vala  HardwareView.vala  OperatingSystemView.vala  SystemView.vala  UpdatesView.vala
src/Widgets/: DriverRow.vala  FirmwareHeaderRow.vala  FirmwareUpdateRow.vala  FirmwareUpdateWidget.vala  LogsDialog.vala  UpdateDetailsDialog.vala
vapi/: libgtop-2.0.vapi  libsystemd.vapi  monetary.vapi  utsname.vapi
